laid out the projects section and fixed spacing in the about sectin

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -71,8 +71,81 @@ body{
   margin-top: 6px;
 }
 
+.active{
+  color: #339595 !important;
+}
+
+.projects{
+  padding: 0;
+  // height: 500px;
+  background-color: #f7f7f7;
+
+  h4{
+    text-align: center;
+    padding-top: 40px;
+    font-size: 40px;
+    font-family: 'Heebo', sans-serif;
+  }
+
+  .section-tabs{
+    width: 100%;
+    height: 60px;
+    display: inline-block;
+    margin-left: 12.5%;
+    padding: 0 10%;
+
+    .tab{
+      width: 24%;
+      display: inline-block;
+      text-align: center;
+      line-height: 60px;
+      color: #969595;  
+
+      span{
+        font-family: 'Heebo', sans-serif;
+        font-weight: bold;
+        font-size: 18px;
+        color: inherit;
+        transition: .5s;      
+        text-decoration: none;
+
+        &:hover{
+          color: #339595;
+          cursor: pointer;
+        }        
+      }
+
+    }
+
+
+
+    // .ruby{
+    //   text-align: right;
+    // }
+
+    // .other{
+    //   text-align: left;
+    // }    
+  }
+
+  .projects-bar{
+    width: 10%;
+    margin-left: 45%;
+  }
+  .proj-img{
+    width: 33%;
+    margin-bottom: 5px;
+  }
+
+  .projects-container{
+        margin-left: 12.5%;
+    // margin-top: 75px;
+  }
+}
+
+
 .about{
-  height: 1000px;
+  height: 900px;
 
   p{
     font-family: "Heebo", sans-serif;
@@ -146,7 +219,7 @@ body{
 }
 
 .skills-container{
-  margin-left: 5%;
+  margin-left: 7%;
 }
 
 .spacer{
